--- a/css/admin.css
+++ b/css/admin.css
@@ -16,6 +16,7 @@
     height: 100%;
     background-color: #3359DF;
     z-index: 100;
+    transition: width 300ms;
 }
 
 .sidebar-brand{
@@ -57,11 +58,40 @@
     padding-right: 1rem;
 }
 
+#nav-toggle:checked + .sidebar{
+    width: 70px;
+}
+
+#nav-toggle:checked + .sidebar .sidebar-brand h2,
+#nav-toggle:checked + .sidebar li{
+    padding-left: 1rem;
+    text-align: center;
+}
+
+#nav-toggle:checked + .sidebar li a{
+    padding-left: 0rem;
+}
+
+#nav-toggle:checked + .sidebar .sidebar-brand h2 span:last-child,
+#nav-toggle:checked + .sidebar li a span:last-child{
+    display: none;
+}
+#nav-toggle:checked ~ .main-content{
+    margin-left: 70px;
+}
+ 
+#nav-toggle:checked ~ .main-content header{
+    width: calc(100% - 70px);
+    left: 70px;
+}
+
 .main-content{
     margin-left: 345px;
+    transition: margin-left 300ms;
 }
 
 header{
+    background-color: #fff;
     display: flex;
     justify-content: space-between;
     padding: 1rem 1.5rem;
@@ -71,6 +101,11 @@ header{
     width: calc(100% - 345px);
     top: 0;
     z-index: 100;
+    transition: left 300ms;
+}
+
+#nav-toggle{
+    display: none;
 }
 
 header h2{
@@ -234,5 +269,137 @@ td{
     color: #3359DF;
 }
 
+@media only screen and (max-width: 1200px){
+   .sidebar{
+        width: 70px;
+    }
+    
+    .sidebar .sidebar-brand h2,
+    .sidebar li{
+        padding-left: 1rem;
+        text-align: center;
+    }
+    
+   .sidebar li a{
+        padding-left: 0rem;
+    }
+    
+   .sidebar .sidebar-brand h2 span:last-child,
+    .sidebar li a span:last-child{
+        display: none;
+    }
+    #nav-toggle:checked ~ .main-content{
+        margin-left: 70px;
+    }
+    
+    .main-content header{
+        width: calc(100% - 70px);
+        left: 70px;
+    }
+
+}
+
+@media only screen and (max-width: 960px){
+    .cards{
+        grid-template-columns: repeat(3, 1fr);
+    }
+    .recent-grid{
+        grid-template-columns: 60% 40%;
+    }
+}
+
+@media only screen and (max-width: 768px){
+    .cards{
+        grid-template-columns: repeat(2, 1fr);
+    }
+    .recent-grid{
+        grid-template-columns: 100%;
+    }
+    .search-wrapper{
+        display: none;
+    }
+    .sidebar{
+        left: -100% !important;
+    }
+
+    header h2{
+        display: flex;
+        align-items: center;
+    }
+
+    header h2 label{
+        display: inline-block;
+        align-items: center;
+        background-color: #3359DF;
+        padding-right: 0rem;
+        margin-right: 1rem;
+        height: 40px;
+        width: 40px;
+        border-radius: 50%;
+        color: #fff;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+    }
+    header h2{
+        font-size: 1.1rem;
+    }
+
+    header h2 span{
+        text-align: center;
+        padding-right: 0rem;
+    }
+
+    .main-content{
+        width: 100%;
+        margin-left: 0rem;
+    }
+
+    header{
+        width: 100% !important;
+        left: 0 !important;
+    }
+    #nav-toggle:checked + .sidebar{
+        left: 0 !important;
+        z-index: 100;
+        width: 345px;
+    }
+   
+    #nav-toggle:checked + .sidebar .sidebar-brand,
+    #nav-toggle:checked + .sidebar li{
+        padding-left: 2rem;
+        text-align: left;
+    }
+    
+    #nav-toggle:checked + .sidebar li a{
+        padding-left: 1rem;
+    }
+    
+    #nav-toggle:checked + .sidebar .sidebar-brand h2 span:last-child,
+    #nav-toggle:checked + .sidebar li a span:last-child{
+        display: inline;
+    }
+    #nav-toggle:checked ~ .main-content{
+        margin-left: 0rem !important;
+    }
+}
+
+@media only screen and (max-width: 768px){
+    .cards{
+        grid-template-columns: repeat(2, 1fr);
+    }
+    .recent-grid{
+        grid-template-columns: 100%;
+    }
+    .search-wrapper{
+        display: none;
+    }
+}
+
+@media only screen and (max-width: 560px){
+    .cards{
+        grid-template-columns: 100%;
+    }
+}
 
 
