--- a/css/users.css
+++ b/css/users.css
@@ -11,6 +11,7 @@ a{
 }
 
 
+
 .sidebar{
     width: 345px;
     position: fixed;
@@ -163,34 +164,8 @@ main{
     min-height: calc(100vh - 90px);
 }
 
-.cards{
-    display: grid;
-    grid-template-columns: repeat(4, 1fr);
-    grid-gap: 2rem;
-    margin-top: 1rem;
-}
 
-.card-single {
-    display: flex;
-    justify-content: space-between;
-    background-color: #fff;
-    padding: 2rem;
-    border-radius: 2px;
-}
-
-.card-single span:first-child{
-    color: #555;
-}
-
-.card-single div:last-child span{
-    font-size: 3rem;
-    color: #3359DF;
-}
-
-
-
-
-
+/* -------- */
 
 
 .recent-grid{
@@ -303,18 +278,12 @@ td{
 }
 
 @media only screen and (max-width: 960px){
-    .cards{
-        grid-template-columns: repeat(3, 1fr);
-    }
     .recent-grid{
         grid-template-columns: 60% 40%;
     }
 }
 
 @media only screen and (max-width: 768px){
-    .cards{
-        grid-template-columns: repeat(2, 1fr);
-    }
     .recent-grid{
         grid-template-columns: 100%;
     }
@@ -388,20 +357,11 @@ td{
 }
 
 @media only screen and (max-width: 768px){
-    .cards{
-        grid-template-columns: repeat(2, 1fr);
-    }
     .recent-grid{
         grid-template-columns: 100%;
     }
     .search-wrapper{
         display: none;
-    }
-}
-
-@media only screen and (max-width: 560px){
-    .cards{
-        grid-template-columns: 100%;
     }
 }
 
