--- a/css/addBlog.css
+++ b/css/addBlog.css
@@ -190,20 +190,28 @@ nav .fa{
 }
 .add-section{
     margin-top: 80px;
+}
+.add-section .upload-file{
     display: flex;
     align-items: center;
+}
+.add-section .upload-file p{
+    margin-left: 20px;
+    color: rgb(85, 85, 85);
+    font-size: 14px;
 }
 .add-section .fa{
     font-size: 50px;
     color: #3359DF;
 }
 .add-section input{
-    margin-left: 20px;
+    margin-top: 60px;
     width: 100%;
     padding: .5rem;
     border: none;
     outline: none; 
     font-size: large;
+    border-bottom: 1px solid rgb(116, 116, 116,0.2);
 }
 
 
