--- a/css/signUp.css
+++ b/css/signUp.css
@@ -71,3 +71,13 @@ input{
     color: #3359DF;
     padding: 10px;
 }
+@media only screen and (max-width: 900px){
+    .container{
+        width: 60%;
+    }
+}
+@media only screen and (max-width: 450px){
+    .container{
+        width: 80%;
+    }
+}
