--- a/css/singlePageBlog.css
+++ b/css/singlePageBlog.css
@@ -234,6 +234,17 @@ nav .fa{
     color: #3359DF;
 }
 
+.comments-section{
+    display: flex;
+    align-items: center;
+    margin-top: 40px;
+}
+.comments-section .comment-profile{
+    width: 70px;
+    height: 70px;
+    border-radius: 50%;
+    margin-right: 15px;
+}
 
 .aboutme{
     width: 30%;
