--- a/css/blogLandingPage.css
+++ b/css/blogLandingPage.css
@@ -312,7 +312,8 @@ nav .fa{
 .news-container{
     display: flex;
     align-items: center;
-    justify-content: space-between;
+    justify-content: flex-start;
+    flex-wrap: wrap;
     margin-top: 50px;
 }
 .news-container .image-news{
@@ -331,6 +332,11 @@ nav .fa{
     padding-left: 20px;
     color: #3359DF;
     font-size: 13px;
+}
+.news-1{
+    width: 28%;
+    margin: 20px 20px;
+    overflow: hidden;
 }
 .news-1 h3{
     font-size: 18px;
@@ -360,7 +366,7 @@ nav .fa{
         width: 100%;
     }
     .news-1{
-        flex-basis: 100%;
+        width: 100%;
         margin-top: 60px;
     }
 }
