--- a/css/singlePageBlog.css
+++ b/css/singlePageBlog.css
@@ -199,14 +199,11 @@ nav .fa{
 
 
 .hitnews-aboutme{
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    flex-direction: row;
-    margin-top: 20px;
+    width: 80%;
+    margin: 20px auto;
 }
 .hitnews{
-    width: 70%;
+    width: 100%;
 }
 
 .hitnews h1{
@@ -220,7 +217,7 @@ nav .fa{
     font-weight: 300;
 }
 .hitnews .hit-news-img{
-    width: 700px;
+    width: 900px;
     margin-top: 20px;
 }
 .hitnews .author-time{
@@ -239,37 +236,46 @@ nav .fa{
     align-items: center;
     margin-top: 40px;
 }
+.CommentItems{
+    display: flex;
+    align-items: center;
+    margin-top: 20px;
+    background-color: #f0eeee;
+    padding: 10px;
+    border-radius: 5px;
+}
 .comments-section .comment-profile{
-    width: 70px;
-    height: 70px;
+    width: 50px;
+    height: 50px;
     border-radius: 50%;
     margin-right: 15px;
 }
-
-.aboutme{
-    width: 30%;
-    margin-left: 60px;
+.commentForm{
+    margin-top: 50px;
 }
-.aboutme h2{
-    font-size: 15px;
-    text-align: center;
-    color: #3359DF;
-    margin-bottom: 15px;
-    margin-top: 20px;
-}
-.aboutme h3{
-    font-size: 15px;
-    margin-bottom: 15px;
-}
-.aboutme .about-me-img{
+.commentForm form input, textarea{
     width: 300px;
-    text-align: center;
-    margin-bottom: 15px;
-} 
-.aboutme p{
-    font-size: 13px;
-    color: #575353;
-    font-weight: 300;
+    padding: 6px;
+    margin-top: 10px;
+    margin-bottom: 10px;
+    border-radius: 4px;
+
+}
+.commentForm form label{
+    margin-top: 10px;
+}
+.commentForm form button{
+    padding: 5px 15px;
+    background-color: #3359DF;
+    border-radius: 4px;
+    border: none;
+    font-size: 16px;
+    color: white;
+    transition: .6s;
+}
+.commentForm form button:hover{
+    background-color: #d2d5dc;
+    color: #3359DF;
 }
 .social-media{
     margin-top: 15px;
