--- a/css/admin.css
+++ b/css/admin.css
@@ -9,7 +9,47 @@
 a{
     color: #fff;
 }
+/* Loading animation */
 
+.loader-container{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    min-height: 100%;
+}
+.loader{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.loader > span{
+    display: inline-block;
+    background-color: rgb(24, 24, 192);
+    width: 14px;
+    height: 14px;
+    border-radius: 50%;
+    margin: 0 8px;
+    animation: bounce 0.6s infinite alternate;
+}
+
+.loader > span:nth-child(2){
+    background-color: palevioletred;
+    animation-delay: 0.2s;
+}
+.loader > span:nth-child(3){
+    animation-delay: 0.4s;
+}
+
+@keyframes bounce {
+    to {
+        width: 14px;
+        height: 14px;
+        transform: translate3d(0, -14px, 0);
+    }
+}
+
+/* ---------------- */
 
 .sidebar{
     width: 345px;
