--- a/css/singlePageBlog.css
+++ b/css/singlePageBlog.css
@@ -1,424 +1,399 @@
-*{
-    margin: 0;
-    padding: 0;
-    font-family: 'poppins', sans-serif;
-    box-sizing: border-box;
+* {
+  margin: 0;
+  padding: 0;
+  font-family: "poppins", sans-serif;
+  box-sizing: border-box;
 }
-a{
-    text-decoration: none;
+a {
+  text-decoration: none;
 }
 /*------------------ button global styling-------------------*/
 
-.btn-colored{
-    width: 170px;
-    background-color: #3359DF;
-    padding: 14px;
-    border: none;
-    border-radius: 40px;
-    color: #fff;
-    font-size: 16px;
-    margin-top: 25px;
-    font-weight: 300;
-    transition: .7s;
+.btn-colored {
+  width: 170px;
+  background-color: #3359df;
+  padding: 14px;
+  border: none;
+  border-radius: 40px;
+  color: #fff;
+  font-size: 16px;
+  margin-top: 25px;
+  font-weight: 300;
+  transition: 0.7s;
 }
-.btn-colored:hover{
-    background-color: #fff;
-    border: 1px solid #3359DF;
-    color: #3359DF;
+.btn-colored:hover {
+  background-color: #fff;
+  border: 1px solid #3359df;
+  color: #3359df;
 }
 /* -------------------------------------------------------- */
 
-header{
-    width: 80%;
-    margin: 10px auto;
+header {
+  width: 80%;
+  margin: 10px auto;
 }
-nav{
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    padding: 25px 0;
+nav {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  padding: 25px 0;
 }
-nav .logo-online{
-    display: flex;
-    align-items: center;
+nav .logo-online {
+  display: flex;
+  align-items: center;
 }
-.logo{
-    width: 160px;
-    margin-right: 30px;
-    cursor: pointer;
+.logo {
+  width: 160px;
+  margin-right: 60px;
+  cursor: pointer;
 }
-nav h1{
-    color: #3359DF;
-    font-size: 28px;
-    cursor: pointer;
+nav h1 {
+  color: #3359df;
+  font-size: 28px;
+  cursor: pointer;
 }
-nav h1 a{
-    text-decoration: none;
-    color: #3359DF;
+nav h1 a {
+  text-decoration: none;
+  color: #3359df;
 }
-.online-icon{
-    width: 70px;
-    cursor: pointer;
+.online-icon {
+  width: 70px;
+  cursor: pointer;
 }
-nav  ul{
-    flex: 1;
-    text-align: right;
-    
+nav ul {
+  flex: 1;
+  text-align: right;
 }
-ul li{
-    display: inline-block;
-    margin: 0 20px;
-    font-size: 14px;
-    font-weight: 700;
+ul li {
+  display: inline-block;
+  margin: 0 20px;
+  font-size: 14px;
+  font-weight: 700;
 }
-ul li a{
-    text-decoration: none;
-    list-style: none;
-    color: #3359DF;
-    transition: .7s;
+ul li a {
+  text-decoration: none;
+  list-style: none;
+  color: #3359df;
+  transition: 0.7s;
 }
-ul li a:hover{
-    background-color: #3359DF;
-    border-radius: 10px;
-    padding: 5px;
-    color: #fff;
+ul li a:hover {
+  background-color: #3359df;
+  border-radius: 10px;
+  padding: 5px;
+  color: #fff;
 }
-.sign-up{
-    border: 1px solid #3359DF ;
-    padding: 5px;
-    border-radius: 10px;
-    transition: 1s;
+.sign-up {
+  border: 1px solid #3359df;
+  padding: 5px;
+  border-radius: 10px;
+  transition: 1s;
 }
-.sign-up:hover{
-    background-color: #3359DF ;
-}
-
-.container{
-    width: 80%;
-    margin: 20px auto;
+.sign-up:hover {
+  background-color: #3359df;
 }
 
-
-
-
-
-
-.nav-container .fa{
-    display: none;
-}
-nav .fa{
-    display: none;
+.container {
+  width: 80%;
+  margin: 20px auto;
 }
 
-@media(max-width: 961px) {
-    ul li{
+.nav-container .fa {
+  display: none;
+}
+nav .fa {
+  display: none;
+}
+
+@media (max-width: 961px) {
+  ul li {
     margin: 0 8px;
     font-size: 12px;
-    }
-    .header-content h1{
-        font-size: 40px;
-    }
-    .nav-container .fa{
-        display: none;
-    }
-    nav .fa{
-        display: none;
-    }
+  }
+  .header-content h1 {
+    font-size: 40px;
+  }
+  .nav-container .fa {
+    display: none;
+  }
+  nav .fa {
+    display: none;
+  }
 }
-@media(max-width: 760px) {
-    ul li{
-        display: block;
-        font-size: 16px;
-        text-align: left;
-        line-height: 40px;
-    }
-    ul li a{
-        color: #fff;
-        font-size: small;
-    }
-    .nav-container{
-        position: absolute;
-        background-color: #3359DF;
-        height: 80vh;
-        width: 200px;
-        top: -80vh;
-        right: 0;
-        text-align: left;
-        z-index: 2;
-        padding: 20px;
-        transition: 1s;
-    }
-    nav{
-        display: flex;
-        justify-content: space-between;
-        align-items: center;
-    }
-    nav .fa{
-        display: block;
-        color: #3359DF;
-        margin: 10px;
-        font-size: 22px;
-        cursor: pointer;
-    }
-    .nav-container .fa{
-        display: block;
-        color: #fff;
-        margin: 10px;
-        font-size: 22px;
-        cursor: pointer;
-    }
-    .nav-container ul{
-        padding: 30px;
-    }
-
+@media (max-width: 760px) {
+  ul li {
+    display: block;
+    font-size: 16px;
+    text-align: left;
+    line-height: 40px;
+  }
+  ul li a {
+    color: #fff;
+    font-size: small;
+  }
+  .nav-container {
+    position: absolute;
+    background-color: #3359df;
+    height: 80vh;
+    width: 200px;
+    top: -80vh;
+    right: 0;
+    text-align: left;
+    z-index: 2;
+    padding: 20px;
+    transition: 1s;
+  }
+  nav {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+  }
+  nav .fa {
+    display: block;
+    color: #3359df;
+    margin: 10px;
+    font-size: 22px;
+    cursor: pointer;
+  }
+  .nav-container .fa {
+    display: block;
+    color: #fff;
+    margin: 10px;
+    font-size: 22px;
+    cursor: pointer;
+  }
+  .nav-container ul {
+    padding: 30px;
+  }
 }
-@media(max-width: 535px){
-    .header-content h1{
-        font-size: 30px;
-    }
+@media (max-width: 535px) {
+  .header-content h1 {
+    font-size: 30px;
+  }
 }
-@media(max-width: 280px){
-    nav h1{
-        font-size: 20px;
-    }
-    .online-icon{
-        width: 50px;
-        margin-left: -15px;
-    }
+@media (max-width: 280px) {
+  nav h1 {
+    font-size: 20px;
+  }
+  .online-icon {
+    width: 50px;
+    margin-left: -15px;
+  }
 }
 
 @media screen and (max-width: 760px) {
-    nav h1{
-        font-size: 25px;
-    }
+  nav h1 {
+    font-size: 25px;
+  }
 }
-
-
 
 /* -----------------styling-section 1 --------------------------*/
 
-
-.hitnews-aboutme{
-    width: 80%;
-    margin: 20px auto;
+.hitnews-aboutme {
+  width: 80%;
+  margin: 20px auto;
 }
-.hitnews{
+.hitnews {
+  width: 100%;
+}
+
+.hitnews h1 {
+  text-align: center;
+  margin-top: 20px;
+  margin-bottom: 20px;
+}
+.hitnews p {
+  font-size: 13px;
+  color: #575353;
+  font-weight: 300;
+}
+.hitnews .hit-news-img {
+  width: 900px;
+  margin-top: 20px;
+}
+.hitnews .author-time {
+  display: flex;
+  align-items: center;
+  margin-top: 25px;
+  color: #3359df;
+}
+.hitnews .author-time p {
+  padding-left: 20px;
+  color: #3359df;
+}
+
+.comments-section {
+  display: flex;
+  align-items: center;
+  margin-top: 40px;
+}
+.CommentItems {
+  display: flex;
+  align-items: center;
+  margin-top: 10px;
+  background-color: #f8f6f6;
+  padding: 8px;
+  border-radius: 10px;
+}
+.comments-section .comment-profile {
+  width: 50px;
+  height: 50px;
+  border-radius: 50%;
+  margin-right: 15px;
+}
+.commentForm {
+  margin-top: 50px;
+}
+.commentForm form input,
+textarea {
+  width: 300px;
+  padding: 4px;
+  margin-top: 10px;
+  margin-bottom: 10px;
+  border-radius: 4px;
+}
+.commentForm form label {
+  margin-top: 10px;
+}
+.commentForm form button {
+  padding: 5px 15px;
+  background-color: #3359df;
+  border-radius: 4px;
+  border: none;
+  font-size: 16px;
+  color: white;
+  transition: 0.6s;
+}
+.commentForm form button:hover {
+  background-color: #d2d5dc;
+  color: #3359df;
+}
+.social-media {
+  margin-top: 15px;
+}
+.social-media h1 {
+  text-align: center;
+  color: #3359df;
+  font-size: 18px;
+}
+.social-media-icons {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  padding-top: 50px;
+  margin-left: -60px;
+  margin-bottom: 40px;
+}
+.social-media-icons .fa {
+  margin-left: 60px;
+  color: #3359df;
+}
+.side-news-container {
+  margin-top: 60px;
+}
+.news-1 {
+  margin-bottom: 35px;
+}
+.news-1 .image-news {
+  width: 300px;
+}
+.news-1 .author-time {
+  display: flex;
+  align-items: center;
+  margin-top: 15px;
+}
+.news-1 .author-time h5 {
+  color: #3359df;
+}
+.news-1 .author-time p {
+  margin-left: 10px;
+  color: #3359df;
+}
+.news-1 h3 {
+  margin-top: 15px;
+}
+
+@media screen and (max-width: 1160px) {
+  .aboutme .about-me-img {
+    width: 200px;
+  }
+  .aboutme {
+    width: 20%;
+  }
+  .hitnews {
+    width: 60%;
+  }
+}
+@media screen and (max-width: 1160px) {
+  .hitnews-aboutme {
+    display: block;
+  }
+  .aboutme .about-me-img {
+    width: 200px;
+  }
+  .aboutme {
     width: 100%;
-}
-
-.hitnews h1{
-    text-align: center;
-    margin-top: 20px;
-    margin-bottom: 20px;
-}
-.hitnews p{
-    font-size: 13px;
-    color: #575353;
-    font-weight: 300;
-}
-.hitnews .hit-news-img{
-    width: 900px;
-    margin-top: 20px;
-}
-.hitnews .author-time{
+    margin-left: 0px;
+  }
+  .hitnews {
+    width: 100%;
+  }
+  .hitnews .hit-news-img {
+    width: 100%;
+  }
+  .aboutme h2,
+  .about-me-img,
+  .text-aboutme {
+    display: none;
+  }
+  .aboutme .social-media {
+    margin-top: 190px;
+  }
+  .side-news-container {
     display: flex;
     align-items: center;
-    margin-top: 25px;
-    color: #3359DF;
+    justify-content: space-between;
+  }
 }
-.hitnews .author-time p{
-    padding-left: 20px;
-    color: #3359DF;
-}
-
-.comments-section{
-    display: flex;
-    align-items: center;
-    margin-top: 40px;
-}
-.CommentItems{
-    display: flex;
-    align-items: center;
-    margin-top: 10px;
-    background-color: #f8f6f6;
-    padding: 8px;
-    border-radius: 10px;
-}
-.comments-section .comment-profile{
-    width: 50px;
-    height: 50px;
-    border-radius: 50%;
-    margin-right: 15px;
-}
-.commentForm{
-    margin-top: 50px;
-}
-.commentForm form input, textarea{
-    width: 300px;
-    padding: 4px;
-    margin-top: 10px;
-    margin-bottom: 10px;
-    border-radius: 4px;
-
-}
-.commentForm form label{
-    margin-top: 10px;
-}
-.commentForm form button{
-    padding: 5px 15px;
-    background-color: #3359DF;
-    border-radius: 4px;
-    border: none;
-    font-size: 16px;
-    color: white;
-    transition: .6s;
-}
-.commentForm form button:hover{
-    background-color: #d2d5dc;
-    color: #3359DF;
-}
-.social-media{
-    margin-top: 15px;
-}
-.social-media h1{
-    text-align: center;
-    color: #3359DF;
-    font-size: 18px;
-}
-.social-media-icons{
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    padding-top: 50px;
-    margin-left: -60px;
-    margin-bottom: 40px;
-}
-.social-media-icons .fa{
-    margin-left: 60px;
-    color: #3359DF;
-}
-.side-news-container{
-    margin-top: 60px;
-}
-.news-1{
-    margin-bottom: 35px;
-}
-.news-1 .image-news{
-    width: 300px;
-}
-.news-1 .author-time{
-    display: flex;
-    align-items: center;
-    margin-top: 15px;
-}
-.news-1 .author-time h5{
-    color: #3359DF;
-}
-.news-1 .author-time p{
-    margin-left: 10px;
-    color: #3359DF;
-}
-.news-1 h3{
-    margin-top: 15px;
-}
-
-
-@media screen and (max-width: 1160px) {
-    .aboutme .about-me-img{
-        width: 200px;
-    } 
-    .aboutme{
-        width: 20%;
-    }
-    .hitnews{
-        width: 60%;
-    }
-    
-}
-@media screen and (max-width: 1160px) {
-    .hitnews-aboutme{
-        display: block;
-    }
-    .aboutme .about-me-img{
-        width: 200px;
-    } 
-    .aboutme{
-        width: 100%;
-        margin-left: 0px;
-    }
-    .hitnews{
-        width: 100%;
-    }
-    .hitnews .hit-news-img{
-        width: 100%;
-    }
-    .aboutme h2, .about-me-img, .text-aboutme{
-        display: none;
-    }
-    .aboutme .social-media{
-        margin-top: 190px;
-    }
-    .side-news-container{
-        display: flex;
-        align-items: center;
-        justify-content: space-between;
-    }
-}
-@media screen and (max-width: 770px){
-    .side-news-container{
-        display: block;
-    }
-    .news-1 .image-news{
-        width: 100%;
-    }
+@media screen and (max-width: 770px) {
+  .side-news-container {
+    display: block;
+  }
+  .news-1 .image-news {
+    width: 100%;
+  }
 }
 
 /* -----------------------Social-Media-Icons */
 
-.social-media-section{
-    width: 80%;
-    margin: 80px auto 0 auto;
-    display: flex;
-    align-items: center;
-    justify-content: space-around;
+.social-media-section {
+  width: 80%;
+  margin: 80px auto 0 auto;
+  display: flex;
+  align-items: center;
+  justify-content: space-around;
 }
-.social-media-section a{
-    text-decoration: none;
-   color: rgba(0, 0, 0, 0.61);
-   transition: .5s;
+.social-media-section a {
+  text-decoration: none;
+  color: rgba(0, 0, 0, 0.61);
+  transition: 0.5s;
 }
-.social-media-section a:hover{
-    color: #3359DF;
+.social-media-section a:hover {
+  color: #3359df;
 }
 @media screen and (max-width: 400px) {
-    .social-media-section a{
-        font-size: smaller;
-    }
+  .social-media-section a {
+    font-size: smaller;
+  }
 }
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-footer{
-    background-color: #3359DF;
-    text-align: center;
-    margin-top: 20px;
+footer {
+  background-color: #3359df;
+  text-align: center;
+  margin-top: 20px;
 }
-footer p{
-    color: #fff;
-    font-size: 14px;
-    font-weight: 300;
-    padding: 10px;
+footer p {
+  color: #fff;
+  font-size: 14px;
+  font-weight: 300;
+  padding: 10px;
 }
